fix the padding issue on mobile device

--- a/styles.css
+++ b/styles.css
@@ -656,6 +656,7 @@ ol {
 
   .sperator {
     border: 1px solid #f4f4f4;
+    margin: 0 20px;
   }
 
   .mobile-header-note {
